--- a/public/index.html
+++ b/public/index.html
@@ -14,5 +14,15 @@
   <div id="app"></div>
   <!-- built files will be auto injected -->
   </body>
+  <style>
+    html {
+      font-family: Arial, Helvetica, sans-serif;
+      background: rgb(9, 48, 9);
+      background: linear-gradient(180deg, rgba(9, 48, 9, 1) 0%, rgba(13, 62, 16, 1) 29%, rgba(31, 96, 50, 1) 51%, rgba(41, 119, 62, 1) 70%, rgba(54, 148, 87, 1) 87%);
+      color: white;
+      margin: 0px;
+      padding: 0px;
+      font-size: 15px;
+  </style>
 
 </html>
